--- a/Linux-kurs II deo/12.Bezbednost/6.ssl.md
+++ b/Linux-kurs II deo/12.Bezbednost/6.ssl.md
@@ -180,7 +180,9 @@ OpenSSL biblioteka uključuje alate za generisanje RSA privatnih ključeva i zah
      
      sudo systemctl restart apache2                                  .....restartujemo apache2 server 
      
-     
+     Port forwarding - TP-Link: Web browsser -> 192.168.0.1 -> ulogujemo se na ruter -> Advanced -> Nat Forwarding -> Virtual Servers -> Add -> 
+                                             -> Service Type: webmin -> External port:443 -> Internal  IP: 192.168.0.108 -> Internal port: 443 -> 
+                                             -> Protocol: ALL -> Save 
      Provera:
      
      Web browser -> https://bozomx.sytes.net -> povežemo se na sajt -> connection is secure -> certificate is valid
